# slamantic

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.base  Dockerfile.full  README.md  build.sh  build_docker.sh  build_orb.sh  build_thirdparty.sh  run_docker.sh
Examples/Monocular/: mono_euroc.cc  mono_frame.cc  mono_kitti.cc  mono_tum.cc  vmuseum.yaml
Examples/RGB-D/: TUM3-b.yaml  TUM3-df.yaml  TUM3-m.yaml  TUM3-maskrcnn.yaml  rgbd_tum.cc  run.sh
Examples/Stereo/: KITTI00-02-b.yaml  KITTI00-02-df.yaml  KITTI00-02-m.yaml  KITTI03-b.yaml  KITTI03-df.yaml  KITTI03-m.yaml  KITTI04-12-b.yaml  KITTI04-12-df.yaml  KITTI04-12-m.yaml  VKITTI-b.yaml  VKITTI-df.yaml  VKITTI-m.yaml  cityscapes-b.yaml  cityscapes-df.yaml  cityscapes-mask.yaml  cityscapes-maskrcnn.yaml  cityscapes.yaml  stereo_cityscapes.cc  stereo_euroc.cc  stereo_kitti.cc  stereo_vkitti.cc
cmake_modules/: FindCSparse.cmake
include/: Frame.h  FrameDrawer.h  KeyFrame.h  LoopClosing.h  MapPoint.h  ORBextractor.h  Optimizer.h  System.h  Tracking.h  Viewer.h
scripts/: cityscapes_create_gt.py  vkitti_create_extrinsic.py
slamantic/: CMakeLists.txt
slamantic/include/slamantic/: DynamicsFactor.hpp  Label.hpp  LabelHistogram.hpp  PatchLabel.hpp  Semantic.hpp  SemanticDescriptor.hpp  SemanticImage.hpp  SemanticMask.hpp  common.hpp  slamantic.hpp
slamantic/include/slamantic/utils/: utils.hpp  vector.hpp
slamantic/labels/: labels-cityscapes.yaml  labels-maskrcnn.yaml  labels-vkitti2.yaml
slamantic/src/: DynamicsFactor.cpp  Label.cpp  LabelHistogram.cpp  PatchLabel.cpp  Semantic.cpp  SemanticDescriptor.cpp  SemanticImage.cpp  SemanticMask.cpp
slamantic/src/utils/: utils.cpp
slamantic/test/: CMakeLists.txt  test_slamantic.cpp
slamantic/test/data/: labels-cityscapes.yaml
slamantic/test/src/: dynamicsFactor.cpp  patchLabel.cpp  semantic.cpp  semanticImage.cpp  semanticMask.cpp
src/: Frame.cc  FrameDrawer.cc  KeyFrame.cc  LocalMapping.cc  LoopClosing.cc  MapDrawer.cc  MapPoint.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  System.cc  Tracking.cc  Viewer.cc
